@@ -7,11 +7,11 @@
 package com.farao_community.farao.swe.runner.app.dichotomy;
 
 import com.powsybl.openrao.commons.Unit;
-import com.powsybl.openrao.data.cracapi.Crac;
-import com.powsybl.openrao.data.cracapi.cnec.FlowCnec;
-import com.powsybl.openrao.data.cracapi.networkaction.NetworkAction;
-import com.powsybl.openrao.data.cracapi.rangeaction.RangeAction;
-import com.powsybl.openrao.data.raoresultapi.RaoResult;
+import com.powsybl.openrao.data.crac.api.Crac;
+import com.powsybl.openrao.data.crac.api.cnec.FlowCnec;
+import com.powsybl.openrao.data.crac.api.networkaction.NetworkAction;
+import com.powsybl.openrao.data.crac.api.rangeaction.RangeAction;
+import com.powsybl.openrao.data.raoresult.api.RaoResult;
 import com.farao_community.farao.dichotomy.api.results.LimitingCause;
 
 import java.util.ArrayList;
@@ -32,17 +32,12 @@ public final class DichotomyResultHelper {
 
     public static String limitingCauseToString(LimitingCause limitingCause) {
         // For the event, we don't use dichotomyResult.getLimitingFailureMessage() because it contains the exception message
-        switch (limitingCause) {
-            case CRITICAL_BRANCH:
-                return "Critical Branch";
-            case GLSK_LIMITATION:
-                return "GSK Limitation";
-            case COMPUTATION_FAILURE:
-                return "Computation Failure";
-            case INDEX_EVALUATION_OR_MAX_ITERATION:
-            default:
-                return "None";
-        }
+        return switch (limitingCause) {
+            case CRITICAL_BRANCH -> "Critical Branch";
+            case GLSK_LIMITATION -> "GSK Limitation";
+            case COMPUTATION_FAILURE -> "Computation Failure";
+            default -> "None";
+        };
     }
 
     public static String getLimitingElement(Crac crac, RaoResult raoResult) {
@@ -65,7 +60,7 @@ public final class DichotomyResultHelper {
 
     public static List<String> getActivatedActionInPreventive(Crac crac, RaoResult raoResult) {
         List<String> prasNames = raoResult.getActivatedNetworkActionsDuringState(crac.getPreventiveState()).stream().map(NetworkAction::getName).collect(Collectors.toList());
-        prasNames.addAll(raoResult.getActivatedRangeActionsDuringState(crac.getPreventiveState()).stream().map(RangeAction::getName).collect(Collectors.toList()));
+        prasNames.addAll(raoResult.getActivatedRangeActionsDuringState(crac.getPreventiveState()).stream().map(RangeAction::getName).toList());
         return prasNames;
     }
 
